.jekyll-cache/Jekyll/Cache/Jekyll--Converters--Markdown/20/1ae993fcea1e46ffa57b8bf0ef7d9634e8b890730ba73877c8a43b714e0da0
I"<p>####准备工作</p>

<p>安装<code class="highlighter-rouge">homebrew, git, yasm.</code>(如果已经安装好可以跳过, 不清楚的再来一遍也无妨,一般mac都已经安装)</p>

<div class="highlighter-rouge"><div class="highlight"><pre class="highlight"><code>ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
brew install git
brew install yasm
</code></pre></div></div>

<p>ps:报错–&gt;(Warning: /usr/local/bin is not in your PATH.)</p>

<div class="highlighter-rouge"><div class="highlight"><pre class="highlight"><code>终端输入命令: export PATH=/usr/local/bin:$PATH
</code></pre></div></div>

<h4 id="获取-ijkplayer-源码">获取 ijkplayer 源码</h4>

<p>在一个合适的位置新建一个文件夹, 假设为桌面, 文件夹名为<code class="highlighter-rouge">ijkplayer</code>.</p>

<p>打开终端, 输入下面的指令</p>

<div class="highlighter-rouge"><div class="highlight"><pre class="highlight"><code># 进入到刚刚新建的文件夹内
cd ~/Desktop/ijkplayer/

# 获取ijkplayer源码
git clone https://github.com/Bilibili/ijkplayer.git ijkplayer-ios

# 进入源码目录
cd ijkplayer-ios

# 切换分支 (目前为k0.8.8, 可以自行去GitHub查看最新版本号)
git checkout -B latest k0.8.8

</code></pre></div></div>

<h4 id="配置编解码器格式支持">配置编解码器格式支持</h4>

<p>默认为最少支持, 如果足够你使用, 可以跳过这一步. 否则可以改为以下配置:</p>

<blockquote>
  <p><code class="highlighter-rouge">module-default.sh</code> 更多的编解码器/格式<br />
<code class="highlighter-rouge">module-lite-hevc.sh</code> 较少的编解码器/格式(包括hevc)<br />
<code class="highlighter-rouge">module-lite.sh</code>较少的编解码器/格式(默认情况)</p>
</blockquote>

<div class="highlighter-rouge"><div class="highlight"><pre class="highlight"><code># 进入 config 目录
cd config

# 删除当前的 module.sh 文件
rm module.sh

# 可根据需要替换为`module-default.sh`, `module-lite-hevc.sh`, `module-lite.sh`
# 创建软链接 module.sh 指向 module-lite-hevc.sh
ln -s module-lite-hevc.sh module.sh

cd ..
cd ios
sh compile-ffmpeg.sh clean
</code></pre></div></div>

<h4 id="获取-ffmpeg-并初始化">获取 ffmpeg 并初始化</h4>

<div class="highlighter-rouge"><div class="highlight"><pre class="highlight"><code>cd ..
./init-ios.sh
</code></pre></div></div>

<h4 id="添加-https-支持">添加 https 支持</h4>

<p>最后会生成支持<code class="highlighter-rouge">https</code>的静态文件<code class="highlighter-rouge">libcrypto.a</code>和<code class="highlighter-rouge">libssl.a</code>,如果不需要可以跳过这一步</p>

<div class="highlighter-rouge"><div class="highlight"><pre class="highlight"><code># 获取 openssl 并初始化
./init-ios-openssl.sh

cd ios

# 在模块文件中添加一行配置 以启用 openssl 组件
echo 'export COMMON_FF_CFG_FLAGS="$COMMON_FF_CFG_FLAGS --enable-openssl"' &gt;&gt; ../config/module.sh

./compile-ffmpeg.sh clean
</code></pre></div></div>

<h4 id="编译">编译</h4>

<div class="highlighter-rouge"><div class="highlight"><pre class="highlight"><code># 如果下一步提示错误`xcrun: error: SDK "iphoneos" cannot be located`, 请执行`sudo xcode-select --switch /Applications/Xcode.app/Contents/Developer/`, 再重新执行下一步

# 编译openssl, 如果不需要https可以跳过这一步
./compile-openssl.sh all

# 编译ffmpeg
./compile-ffmpeg.sh all
</code></pre></div></div>

<p>ps: 如果提示错误:</p>

<div class="highlighter-rouge"><div class="highlight"><pre class="highlight"><code>./libavutil/arm/asm.S:50:9: error: unknown directive
        .arch armv7-a
        ^
make: *** [libavcodec/arm/aacpsdsp_neon.o] Error 1
</code></pre></div></div>

<p>最新的<code class="highlighter-rouge">Xcode</code>已经弱化了对 32 位的支持, 解决方法:<br />
在<code class="highlighter-rouge">compile-ffmpeg.sh</code>文件中删除<code class="highlighter-rouge">armv7</code>, 修改如:<code class="highlighter-rouge">FF_ALL_ARCHS_IOS8_SDK="arm64 i386 x86_64"</code>
再重新执行出现错误的命令:</p>

<div class="highlighter-rouge"><div class="highlight"><pre class="highlight"><code> ./compile-ffmpeg.sh all
</code></pre></div></div>

<h4 id="打开-ijkmediaplayer-项目">打开 IJKMediaPlayer 项目</h4>

<p>用命令:</p>

<div class="highlighter-rouge"><div class="highlight"><pre class="highlight"><code>open IJKMediaPlayer/IJKMediaPlayer.xcodeproj
</code></pre></div></div>

<p>或者手动用 Xcode 打开 ios 目录下的 IJKMediaPlayer 项目.</p>

<h4 id="添加-openssl-相关包以支持-https">添加 openssl 相关包以支持 https</h4>

<p>如果不使用<code class="highlighter-rouge">https</code>, 可以跳过此步, 直接开始打包<code class="highlighter-rouge">framwork</code>
如果使用<code class="highlighter-rouge">https</code>, 那么需要手动给<code class="highlighter-rouge">IJKMediaFramework</code>添加<code class="highlighter-rouge">libcrypto.a</code>和<code class="highlighter-rouge">libssl.a</code>文件, 默认不会添加</p>

<p>ps: 这两个依赖库的目录为:<code class="highlighter-rouge">ijkplayer-ios/ios/build/universal/lib</code>, 只有进行了上面跟<code class="highlighter-rouge">openssl</code>相关的操作, 才会在这个目录下有生成<code class="highlighter-rouge">libcrypto.a</code>和<code class="highlighter-rouge">libssl.a</code></p>

<p><img src="/img/20200506/1.webp" alt="项目1" /></p>

<p><a href="https://www.jianshu.com/p/444194035787">转载简书地址</a></p>
:ET